--- a/src/jasa_pengiriman/client/view/CabangView.form
+++ b/src/jasa_pengiriman/client/view/CabangView.form
@@ -261,6 +261,9 @@
         </Property>
         <Property name="name" type="java.lang.String" value="cmbProvinsi" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="provinsiComboBoxItemStateChanged"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Object&gt;"/>
       </AuxValues>
